# quant-finance-pricing-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: streamlit_app.py
docs/: black_scholes_notes.md
docs/theory/black_scholes/: README.md
examples/: quick_start.py
notebooks/: 01_black_scholes_derivation.ipynb  02_greeks_and_hedging.ipynb  03_implied_volatility_solver.ipynb  04_binomial_tree_pricing.ipynb  05_monte_carlo_pricing.ipynb  06_finite_difference_black_scholes.ipynb
src/quant_finance_pricing_lab/: __init__.py  binomial_tree.py  black_scholes.py  finite_difference.py  greeks.py  implied_vol.py  implied_volatility.py  monte_carlo.py  scenario_analysis.py  volatility_smile.py
tests/: test_binomial_tree.py  test_black_scholes.py  test_greeks.py  test_implied_vol.py  test_monte_carlo.py
